# cmake-gtest-coverage-example

./: CMakeLists.txt  main.cpp
